# backend

./: docker-compose.yml
kubernetes/: ingress.yaml
project/: pyproject.toml
project/app/database/: database.py  populate_db.py
project/app/utils/: minio.py
